assets/css/style.css
body{
    font-family: 'PT Serif', serif;
}
.title-bar{
    background-color: #303030;
    color: #818385;
}

.title{
    text-align:center;
}

.fas{
    margin-top: 10px;
}

.fa-star{
    color: gold;
}

#close-menu{
    font-size: 2em;
    position: relative;
    right: 10px;
}

#side-menu, #favs-menu{
    background-color: #303030;
    color: #818385;
    z-index: 1;
    height: 100%;
    position: fixed;
    top: 0;
    width: 0;
    overflow-x: hidden;
    transition: 0.5s;
    white-space: nowrap;
}

#side-menu{
    left: 0;
}

#favs-menu{
    right: 0;
}

.list-group-item{
    color: #818385;
    background-color: #303030;
}

.list-group-item:hover{
    color: white;   
}

.list-group-item.active{
    color:white;
    background-color: #818385;
    border-color: rgba(0,0,0,.125);
}

#side-menu ul div a, #favs-menu ul div a{
    text-align: center;
    font-size: 2.5em;
    line-height: 2em;
}

.menu-bar{
    padding-top:5px;
    padding-bottom: 5px;
    background-color: #303030;
}

.dropdown-toggle, .dropdown-menu{
    width: 100%;
}

.content{
    padding-top: 30px;
}

#chart{
    width: 100%;
}

#input-group{
    width: 100%;  
}

#name{
    font-size: 1.5em;
}

#ceo{
    font-size:.5em;
    padding-bottom: 5px;
}

#price{
    font-size: 2em;
}

#chg, #chgPer, #high, #low{
    font-size: 1em;
}
#logo{
    width: 100%;
}

#graph{
    position: relative;
    width: 100%;
}

@media (min-width: 568px){

    .fa-star{
        position: relative;
        right: -50px;
    }
}

@media (min-width: 768px){

    #name{
        font-size: 2em;
    }

    #price{
        font-size: 3em;
    }
    
    #chg, #chgPer, #high, #low{
        font-size: 1.5em;
        white-space: nowrap;
    }
}

